# resc

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  bacon.toml  compile-all-targets.sh  release.sh
demo/: demo.conf.json
examples/: complexe-conf.json  simple-conf.hjson  simple-conf.json  simple-example.md
examples/go-client/: worker.go
examples/java-client/: build.gradle  pom.xml
examples/java-client/src/main/java/com/keods/resc/examples/: SimpleWorker.java
examples/node-client/: main.js  package.json
examples/rust-client/: Cargo.toml
examples/rust-client/src/: main.rs
src/: conf.rs  errors.rs  fetcher.rs  fetchers.rs  main.rs  make.rs  pattern.rs  patterns.rs  rule.rs  rule_result.rs  rules.rs  ruleset.rs  serde_format.rs  watcher.rs  watchers.rs
