[package]
name = "resc"
version = "0.3.0-dev"
authors = ["Denys Séguret <denys.seguret@fivesgroup.com>"]
edition = "2018"
description = "A Redis based task orchestrator"
repository = "https://github.com/Canop/resc"
license = "MIT"

[dependencies]
anyhow = "1.0"
deser-hjson = "0.1.9"
lazy_static = "1.4"
redis = "0.17"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
reqwest = "0.9"
log = "0.4"
env_logger = "0.5.13"
chrono = "0.4"
thiserror = "1.0"

[patch.crates-io]
# deser-hjson = { path = "../deser-hjson" }
