[package]
name = "resc"
version = "0.3.1"
authors = ["Denys Séguret <denys.seguret@fivesgroup.com>"]
edition = "2018"
description = "A Redis based task orchestrator"
repository = "https://github.com/Canop/resc"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
deser-hjson = "0.1.13"
env_logger = "0.5.13"
lazy_static = "1.4"
log = "0.4"
redis = "0.17"
regex = "1.5"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
thiserror = "1.0"

[patch.crates-io]
# deser-hjson = { path = "../deser-hjson" }
