[package]
name = "resc"
version = "0.3.4"
authors = ["Canop <cano.petrole@gmail.com>"]
edition = "2018"
description = "A Redis based task orchestrator"
repository = "https://github.com/Canop/resc"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
deser-hjson = "1.1.0"
env_logger = "0.5.13"
lazy_static = "1.4"
log = "0.4"
redis = "0.21.2"
regex = "1.8"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
thiserror = "1.0"

[patch.crates-io]
# deser-hjson = { path = "../deser-hjson" }
